[package]
name = "escape8259"
description = "RFC8259-compliant string escaping and un-escaping"
keywords = ["json", "rfc8259", "cddl"]
categories = ["encoding"]
version = "0.5.2"
repository = "https://github.com/ericseppanen/escape8259"
license = "MIT"
authors = ["Eric Seppanen <eds@reric.net>"]
readme = "README.md"
edition = "2018"
exclude = ["Cranky.toml"]

[dependencies]
rustversion = "1.0"

[package.metadata.release]
dev-version = false
pre-release-commit-message = "release {{version}}"
